# subtec-app

./: CHANGELOG.md  LICENSE  NOTICE  june18_reviewed.patch
dvbsubdecoder/: CMakeLists.txt  dvbsubdecoder.pc.in
dvbsubdecoder/doc/: add_pes_buffer.puml  classes.puml  draw.puml  process.puml
dvbsubdecoder/src/: AllocatorTraits.hpp  Array.hpp  BasicAllocator.cpp  BitStream.hpp  Clut.cpp  Clut.hpp  ColorCalculator.cpp  ColorCalculator.hpp  Config.hpp  Consts.hpp  Database.cpp  Database.hpp  DecoderFactory.cpp  DecoderImpl.cpp  DecoderImpl.hpp  Display.hpp  DynamicAllocator.cpp  Memory.hpp  ObjectInstance.hpp  ObjectParser.cpp  ObjectParser.hpp  ObjectPool.hpp  ObjectTablePool.hpp  Page.hpp  Parser.cpp  Parser.hpp  ParserCDS.cpp  ParserCDS.hpp  ParserDDS.cpp  ParserDDS.hpp  ParserEDS.cpp  ParserEDS.hpp  ParserException.hpp  ParserODS.cpp  ParserODS.hpp  ParserPCS.cpp  ParserPCS.hpp  ParserRCS.cpp  ParserRCS.hpp  PesBuffer.cpp  (+18 more)
dvbsubdecoder/test/: CMakeLists.txt
subttxrend-app/: CMakeLists.txt
subttxrend-app/conf/: config.ini
subttxrend-app/src/: Application.cpp  Application.hpp  CcSubController.cpp  CcSubController.hpp  Channel.hpp  Configuration.cpp  Configuration.hpp  Controller.cpp  Controller.hpp  ControllerInterface.hpp  Options.cpp  PesFinder.cpp  PesFinder.hpp  ScteSubController.cpp  ScteSubController.hpp  StcProvider.cpp  StcProvider.hpp  TtmlController.cpp  TtmlController.hpp  TtxController.hpp  WebvttController.hpp  main.cpp
subttxrend-app/test/: Application_test.cpp  CMakeLists.txt  Controller_test.cpp  test_config.ini
subttxrend-app/x86_builder/: build.sh  config.ini
subttxrend-common/: CMakeLists.txt
subttxrend-common/include/: AsClient.hpp  AsListener.hpp  ConfigProvider.hpp  IniFile.hpp  Logger.hpp  LoggerLevel.hpp  LoggerManager.hpp  PrefixConfigProvider.hpp  Properties.hpp  StcProvider.hpp  StringUtils.hpp  TtmlAsClient.hpp  Utils.hpp  WsConnection.hpp  WsEndpoint.hpp
subttxrend-common/src/: ConfigProvider.cpp  ConfigProviderStorage.cpp  ConfigProviderStorage.hpp  IniFile.cpp  Logger.cpp  LoggerBackend.hpp  LoggerBackendRdk.cpp  LoggerBackendRdk.hpp  LoggerBackendStd.cpp  LoggerBackendStd.hpp  LoggerExecutor.hpp  LoggerManagerImpl.cpp  LoggerManagerImpl.hpp  LoggingGroup.hpp  StringUtils.cpp
subttxrend-common/test/: CMakeLists.txt  ConfigProvider_test.cpp  IniFile_test.cpp  JsonData_test.cpp  LoggerManagerImpl_test.cpp  Properties_test.cpp  StringUtils_test.cpp  rdk_debug.cpp  rdk_debug.h  test3.ini
subttxrend-ctrl/: CMakeLists.txt
subttxrend-ctrl/conf/: subttxrend-app.conf
subttxrend-ctrl/src/: CcSubController.cpp  CcSubController.hpp  Channel.hpp  Configuration.cpp  Configuration.hpp  ControllerInterface.hpp  DvbSubController.cpp  DvbSubController.hpp  Options.cpp  Options.hpp  PesFinder.cpp  PesFinder.hpp  ScteSubController.cpp  ScteSubController.hpp  StcProvider.cpp  StcProvider.hpp  TtmlController.cpp  TtmlController.hpp  TtxController.cpp  TtxController.hpp  WebvttController.cpp  WebvttController.hpp
subttxrend-ctrl/test/: CMakeLists.txt  CcSubController_test.cpp  Configuration_test.cpp  DvbSubController_test.cpp  Options_test.cpp  PesFinder_test.cpp  ScteSubController_test.cpp  StcProvider_test.cpp  TtmlController_test.cpp  TtxController_test.cpp  WebvttController_test.cpp
subttxrend-gfx/: CMakeLists.txt
subttxrend-gfx/include/: Base64ToPixmap.hpp  DrawContext.hpp  Engine.hpp  Factory.hpp  FontStrip.hpp  FontStripMap.hpp  KeyEvent.hpp  KeyEventListener.hpp  PrerenderedFont.hpp  Types.hpp  Window.hpp
subttxrend-gfx/quartzcpp/: CMakeLists.txt
subttxrend-gfx/src/: AlphaPixmap.hpp  Backend.hpp  BackendFactory.cpp  BackendFactory.hpp  BackendListener.hpp  Base64ToPixmap.cpp  Blitter.cpp  Blitter.hpp  ClutPixmap.hpp  ColorArgb.cpp  ColorizedPixmap.hpp  EngineHooks.hpp  EngineImpl.cpp  EngineImpl.hpp  Factory.cpp  FontStripImpl.cpp  FontStripImpl.hpp  GLcpp.cpp  GLcpp.hpp  Pixel.hpp  Pixmap.hpp  PrerenderedFontCache.cpp  PrerenderedFontImpl.cpp  PrerenderedFontImpl.hpp  QuartzBackend.cpp  QuartzBackend.hpp  Surface.hpp  WaylandBackend.cpp  WaylandBackend.hpp  WaylandBackendEgl.cpp  WaylandBackendEgl.hpp  WaylandBackendLoop.hpp  WaylandBackendLoopEpoll.hpp  WaylandBackendLoopGlib.cpp  WaylandBackendLoopGlib.hpp  WaylandBackendShm.cpp  WaylandBackendShm.hpp  WaylandBuffer.cpp  WaylandBuffer.hpp  WaylandBufferManager.cpp  (+3 more)
subttxrend-gfx/test/: Base64ToPixmap_test.cpp  CMakeLists.txt  ColorArgb_test.cpp  EngineImpl_test.cpp  FontStripImpl_test.cpp  Logger.cpp  Logger.hpp  NonCopyable.hpp  PrerenderedFontCache_test.cpp  PrerenderedFontImpl_test.cpp  TestRunner.cpp  WindowImpl_test.cpp
subttxrend-gfx/waylandcpp/: CMakeLists.txt
subttxrend-protocol/: CMakeLists.txt  Doxyfile.in
subttxrend-protocol/include/: Packet.hpp  PacketData.hpp  PacketFlush.hpp  PacketMute.hpp  PacketParser.hpp  PacketPause.hpp  PacketResetAll.hpp  PacketResetChannel.hpp  PacketResume.hpp  PacketSetCCAttributes.hpp  PacketSubtitleSelection.hpp  PacketTeletextSelection.hpp  PacketTimestamp.hpp  PacketTtmlInfo.hpp  PacketTtmlSelection.hpp  PacketTtmlTimestamp.hpp  PacketUnmute.hpp  PacketWebvttSelection.hpp  PacketWebvttTimestamp.hpp  StreamValidator.hpp
subttxrend-protocol/src/: Buffer.cpp  Buffer.hpp  BufferReader.cpp  BufferReader.hpp  Packet.cpp  PacketData.cpp  PacketInvalid.cpp  PacketInvalid.hpp  PacketParser.cpp  PacketSetCCAttributes.cpp  PacketSubtitleSelection.cpp  PacketTeletextSelection.cpp  PacketTimestamp.cpp  PacketTtmlInfo.cpp  PacketTtmlSelection.cpp  PacketTtmlTimestamp.cpp  PacketWebvttSelection.cpp  PacketWebvttTimestamp.cpp  StreamValidator.cpp
subttxrend-protocol/test/: BufferReader_test.cpp  Buffer_test.cpp  CMakeLists.txt  DataBuffer.hpp  PacketData_test.cpp  PacketParser_test.cpp  PacketResetAll_test.cpp  PacketResetChannel_test.cpp  PacketSetCCAttributes_test.cpp  PacketSubtitleSelection_test.cpp  (+9 more)
subttxrend-scte/: CMakeLists.txt
subttxrend-testapps/: CMakeLists.txt
subttxrend-ttml/: CMakeLists.txt
subttxrend-ttxt/: CMakeLists.txt
subttxrend-webvtt/: CMakeLists.txt  Doxyfile.in
ttxdecoder/: CMakeLists.txt  Doxyfile.in
(+997 files in other folders)
